--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -11,7 +11,6 @@ body{
 	max-width: 1140px;
 	margin: auto;
 }
-
 .site-header{
 	background-color: #222;
 	color: #fff;
@@ -75,10 +74,11 @@ body{
  .root-section{
  	display: grid;
  	grid-template-columns: repeat(10, 1fr);
+
+
  }
  .content-1{
  	grid-column: 1 / 9;
- 	
  	display: grid;
  	grid-template-columns: repeat(3, 1fr);
  	grid-gap: 10px;
@@ -86,9 +86,44 @@ body{
  }
  .content-2{
  	grid-column: 9 / 11;
- 	
  	padding: 15px;
+ 	background-color: #222;
+ 	overflow-x: hidden;
  }
+/**
+ * estilos search form
+ * */
+.searchform{
+	display: flex;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+.searchform .input-form{
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border-top-left-radius: 0.5em;
+	border-bottom-left-radius: 0.5em;
+	outline: none;
+}
+.searchform .input-submit{
+	background-color: #1dde26;
+	color: #fff;
+	border-top-right-radius: 0.5em;
+	border-bottom-right-radius: 0.5em;
+}
+
+
+
+/**
+ * 
+ * estilo de archive
+ * */
+.archive-title{
+	padding: 20px;
+	grid-column: 1 / 11;
+	color: #fff;
+}
+
 
 
 /**
@@ -96,8 +131,7 @@ body{
  * **/
 .post{
 	display: flex;
-	flex-direction: column;
-	align-items: center;	
+	flex-direction: column;	
 	background-color: #222;
 	border-radius: 0.5em;
 	padding: 10px;
@@ -105,13 +139,15 @@ body{
 }
 .post p{
 	line-height: 23px;
-	text-indent: 5px;
 }
 .post-thumbnail{
 	width: 1fr;
 	height: 150px;
 	overflow: hidden;
+	margin-right: auto;
+	margin-left: auto;
 }
+
 .post-thumbnail .image-thumbnail{
 	width: 100%;
 }
@@ -127,12 +163,39 @@ body{
 	padding-top: 20px;
 
 }
+/**
+ * estilos single post
+ * */
+.fullwidth{
+	display: flex;
+	flex-direction: column;
+
+}
+.post-thumbnail-single{
+	height: 405px;
+}
+.post-thumbnail-single a{
+	text-decoration: none;
+	color: #fff;
+}
+
+
+
 
 /*
 *estilos paginação
 */
 .pagination{
 	grid-column: 1 / 9;
+	display: flex;
+	justify-content: space-between;
+	background-color: #222;
+	padding: 10px;
+	border-radius: 0.5em;
+}
+.pagination a{
+	color: #fff;
+	text-decoration: none;
 }
 
 
@@ -141,11 +204,43 @@ body{
  * estilos de sidebar
  * **/
  .sidebar{
- 	background-color: #222;
  	padding: 15px;
  	border-radius: 0.5em;
  	color: #fff;
  }
+
+.widget_archive ul li,
+.widget_categories ul li{
+	list-style: none;
+}
+.widget_archive a,
+.widget_categories a{
+	display: block;
+	text-decoration: none;
+	color: #f1f1f1;
+	padding: 5px;
+}
+.widget_archive a:hover,
+.widget_categories a:hover{
+	text-decoration: underline;
+}
+/**
+ * 
+ * estilos de comentários
+ **/
+.comments{
+	background-color: #222;
+	padding: 15px;
+	border-radius: 0.5em;
+}
+.comment{
+	color: #fff;
+	border-bottom: 1px solid #333;
+	background-color: #333;
+	padding: 10px;
+	margin-bottom: 10px;
+}
+
 
 
  /**
